--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "bulma": "0.9.3",
+    "firebase": "^10.11.0",
     "pinia": "2.0.11",
     "vue": "3.2.29",
     "vue-router": "4.0.12"
